--- a/plugin.xml
+++ b/plugin.xml
@@ -44,9 +44,14 @@
         <source-file src="src/android/Notification.java" target-dir="src/com/cowbell/cordova/geofence" />
         <source-file src="src/android/ReceiveTransitionsIntentService.java" target-dir="src/com/cowbell/cordova/geofence" />
         <source-file src="src/android/RemoveGeofenceCommand.java" target-dir="src/com/cowbell/cordova/geofence" />
+        <source-file src="src/android/Profile.java" target-dir="src/com/cowbell/cordova/geofence" />
+        <source-file src="src/android/SISO.java" target-dir="src/com/cowbell/cordova/geofence" />
+        <source-file src="src/android/OperationType.java" target-dir="src/com/cowbell/cordova/geofence" />
+        <source-file src="src/android/OperationParams.java" target-dir="src/com/cowbell/cordova/geofence" />
 
-        <framework src="com.google.android.gms:play-services-location:+" />
+        <framework src="com.google.android.gms:play-services-location:9.8.0" />
         <lib-file src="src/android/libs/gson-2.3.jar" />
+        <lib-file src="src/android/libs/httpclient-4.4.1.1.jar" />
 
         <config-file target="config.xml" parent="/*">
             <feature name="GeofencePlugin">
